--- a/wiki/ClassBinder.wiki
+++ b/wiki/ClassBinder.wiki
@@ -19,7 +19,7 @@ The source code and API documentation for this class is in
 An interesting property of this class binding framework is that it's compile-time typesafe. Though v8 uses `void *` as the parameter type for destruction callbacks, the implementation uses a mix of class templates, private static functions, and an internal void-to-native mapping to ensure that only the correct types can, e.g., be passed to the correct destructor, and that `CastFromJS<TypeB>()` cannot cast (using the default conversions) to `TypeA`. The implementation is believed to be 100% typesafe.
 
 
-==Binding member functions==
+=Binding member functions=
 
 The primary feature added by !ClassBinder is the ability to bind native
 member functions and variables of the wrapped type. The syntax for doing so is a tiny
@@ -95,7 +95,7 @@ conversion limitations (and features) of that API. As an exception, it supports
 member functions returning `void` (which the `v8::juice::convert` API cannot
 directly handle).
 
-==Binding member variables==
+=Binding member variables=
 
 Again, the syntax is ugly, but not as ugly as that for binding functions. If we have a type with a `std::string` member named `str`, we can bind that member with:
 
@@ -298,3 +298,99 @@ m.str = bye, world!
 m.other = null
 m.other.str = i am the other!
 }}}
+
+=Dual JS/C++ Inheritance=
+
+As of 20090324 WeakJSClassCreator supports dual JS/C++ inheritance. What does that mean?
+It means that if we have native type called `ParentType` and a suclass called `SubType`,
+and we bind both of them with WeakJSClassCreator, then the JS-side `SubType` objects can
+access their _inherited_ bound member functions as if they were an object of type `ParentType`.
+That sounds a bit confusing, but an example might clear it up:
+
+{{{
+class ParentType
+{
+  ...
+  virtual int vfunc();
+};
+class SubType : public ParentType
+{
+...
+};
+
+... add WeakJSClassCreatorOps<ParentType>
+    and WeakJSClassCreatorOps<SubType> ...
+
+// And we can then do:
+// Bind parent type:
+typedef ClassBinder<ParentType> WP;
+WP wp( targetObject );
+wp.BindMemFunc< int, &ParentType::vfunc >("vfunc")
+  .Seal();
+
+// Bind subclass:
+typedef ClassBinder<SubType> WS;
+WS ws( targetObject );
+ws.Inherit( wp )
+  .Seal();
+}}}
+
+This support is actually a feature of `WeakJSClassCreator<>`, the
+parent class of `ClassBinder`, but since `WeakJSClassCreator<>`
+has no direct support for binding member functions, this feature
+is only really accessible via subclasses like `ClassBinder`.
+
+In C++ and JS, we take it for granted that calling
+`aSubTypeObject.vfunc()` would call the inherited virtual
+function. However, when crossing JS/C++ boundaries, that feature does
+not come for free. Since we use C++ templates to create the bindings
+for classes, any conversions must know the _exact_ templatized type of
+the native class. Because of this, `WeakJSClassCreator<ParentType>`
+and `WeakJSClassCreator<SubType>` are, for purposes of typing (and in
+particular for purposes of corss-JS/C++ conversions), unrelated, and
+thus have no inherent implicit conversion ability.
+
+When `WeakJSClassCreator<SubType>::Inherit()` is called, an internal
+lookup function is added to `WeakJSClassCreator<ParentType>`, such
+that calls to `WeakJSClassCreator<ParentType>::GetSelf()` (and
+friends) will act "virtually". That is, if they cannot determine that
+the JS object being converted is-exactly-a `ParentType` object, they
+will use the internal lookup function to see if the object is an
+instance of some other subclass of `ParentType`. Using this approach,
+the member functions bound to `ParentType` can get a pointer to their
+`this` object, even though the objects weren't created by
+`WeakJSClassCreator<ParentType>`.
+
+It is a _compile-time_ error to try to inherit either a base type for
+which `WeakJSClassCreator<>` is not implemented or which is not a C++
+base type of the wrapped type.
+
+Any number of types may `Inherit()` a given base this way, and when
+looking for a conversion they will be searched in the order that the
+`Inherit()` calls were made. Thus the most-use subclasses should be
+declared first (if possible).
+
+This approach has some limitations, the most glaring being that when we have more than
+one level of inheritance, we must call `Inherit()` for each level of the hierarchy,
+which is a real drag. i'm looking into other approaches which won't require this.
+
+==JS/C++ cast operations in the face of inheritance==
+
+If we register the "standard" casting operators for a wrapped type using:
+
+{{{
+// must be in global-scope code
+#define WEAK_CLASS_TYPE SubType
+#include <v8/juice/WeakJSClassCreator-CastOps.h>
+}}}
+
+(or equivalent)
+
+then `CastToJS()` and `CastFromJS()` will use
+`WeakJSClassCreator<SubType>` for the conversions, and thus provide
+the same "virtual" conversions. `SubType` may then participate in type
+conversions which would normally apply to some base type object (for
+this to work, each base has to be `Inherit()`ed). This applies, for
+example, to the type conversions applied automatically to function
+arguments (as well as for the `this` object) for bound member
+function as well as for bound non-member functions.
